# tasvir

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  tasvir.pc.in
apps/: CMakeLists.txt  benchmark.cpp  test_ctrl.c
apps/benchmark/: CMakeLists.txt  benchmark.cpp  simdxorshift128plus.h
apps/cyclades/: .gitignore  CMakeLists.txt
apps/cyclades/src/: DatasetReader.h  defines.h  main.cpp  run.h
apps/cyclades/src/Datapoint/: Datapoint.h  LSDatapoint.h  MCDatapoint.h  MatrixInverseDatapoint.h  WordEmbeddingsDatapoint.h
apps/cyclades/src/DatapointPartitions/: DatapointPartitions.h
apps/cyclades/src/Gradient/: Gradient.h
apps/cyclades/src/Model/: LSModel.h  MCModel.h  MatrixInverseModel.h  Model.h  WordEmbeddingsModel.h
apps/cyclades/src/Partitioner/: BasicPartitioner.h  CycladesPartitioner.h  DFSCachePartitioner.h  GreedyCachePartitioner.h  Partitioner.h
apps/cyclades/src/Trainer/: CacheEfficientHogwildTrainer.h  CycladesTrainer.h  HogwildTrainer.h  Trainer.h
apps/cyclades/src/Updater/: DenseLinearSGDUpdater.h  FastMCUpdater.h  SAGAUpdater.h  SVRGUpdater.h  SparseSGDUpdater.h  Updater.h  WordEmbeddingsUpdater.h
apps/kvstore/: CMakeLists.txt  alloc.c  alloc.h  alloc_dict.c  alloc_dict.h  dict.c  dict.h  fmacros.h  main-putget.c  main.c
apps/sample/: counter.cpp
etc/: run_0.conf  run_benchmark.conf  run_cyclades.conf  run_kvs.conf  run_monitor.conf  run_openflow.conf  run_sample.conf  tasvir.conf
include/: tasvir.h  tasvir_array.hpp
include/tasvir/: array.hpp  defs.h  mux.hpp  tasvir.h  types.h  utils.h
scripts/: benchmark.sh  benchmark_plot.py  run.sh  run_benchmark.sh  test_benchmark.sh
src/: CMakeLists.txt  alloc.c  area.c  daemon.c  dpdk.c  init.c  llvm_log_write.cpp  llvm_pass.cpp  root.c  rpc.c  service.c  stat.c  sync.c  sync_external.c  sync_internal.c  tasvir.c  tasvir.h  utils.c  utils.h
tools/: benchmark.sh  run.sh
